add script for consistency checking (yarn checkdb)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "node ./dist/launch.js",
     "rewind": "node ./dist/rewind.js",
     "reset": "node ./dist/reset.js",
+    "checkdb": "node ./dist/check.js",
     "prepublishOnly": "yarn build"
   },
   "repository": {
